--- a/yamls/all_min_client_cfg.yaml
+++ b/yamls/all_min_client_cfg.yaml
@@ -2,12 +2,11 @@ criterion:
   type: balanced_softmax  # alpha_divergence, kl_divergence
   label_smoothing: 0
 train:
-  round_after: 0
   batch_or_epoch: epoch
   local_update_steps: 1
   optimizer:
     type: patchSGD
-    lr: 0.1
+    lr: 0.08
     momentum: 0.9
     nesterov: true
     weight_decay: 0.0005  # TODO(Variant): how to set this value
@@ -18,3 +17,18 @@ train:
     warmup_iters: 5 # epoch * num_batch_per_epoch
     clamp_lr: 0.
     warmup_factor: 0.0001
+finetune:
+  before_eval: true
+  batch_or_epoch: epoch
+  local_update_steps: 20
+  optimizer:
+    type: patchSGD
+    lr: 0.001
+    momentum: 0.9
+    nesterov: true
+    weight_decay: 0.00001
+    weight_decay_bn_bias: 0.
+  scheduler:
+    type: warmup_cosine_scheduler
+    warmup_iters: 0
+    clamp_lr: 0.
