--- a/yamls/kemf_client_cfg.yaml
+++ b/yamls/kemf_client_cfg.yaml
@@ -1,5 +1,7 @@
+personalized_model_cfg: "exp/nas_fl_lr_on_cifar100_lr0.1_lstep1/sub_exp_20231103212521/client_best_infos.json"
+
 model:
-  type: attentive_min_subnet
+  type: attentive_subnet
 #    n_classes: 10
   bn_momentum: 0.1
   bn_eps: 0.00001
@@ -7,26 +9,27 @@ model:
   drop_connect: 0.2
   drop_connect_only_last_two_stages: true
 trainer:
-  type: enhance_trainer
+  type: mutual_distill_trainer
 criterion:
-  type: balanced_softmax # CrossEntropyLoss, balanced_softmax
-  label_smoothing: 0
+  type: kl_divergence # CrossEntropyLoss, balanced_softmax
+  temperature: 1.0
+  alpha: 0.5
 regularizer:
   mu: 0.0
   type: ''
 dataloader:
   type: base
-  batch_size: 320
+  batch_size: 256
   drop_last: false # only for train dataloader
   shuffle: true # only for train dataloader
   pin_memory: false
   num_workers: 6
 train:
-  batch_or_epoch: epoch
   local_update_steps: 1
+  batch_or_epoch: epoch
   optimizer:
     type: patchSGD
-    lr: 0.1
+    lr: 0.08
     momentum: 0.9
     nesterov: true
     weight_decay: 0.0005  # TODO(Variant): how to set this value
@@ -46,3 +49,18 @@ eval:
   split: ['test'] # 'val',
   best_res_update_round_wise_key: 'test_acc'
   report: ['raw']  # 'weighted_avg', 'avg', 'fairness',
+finetune:
+  before_eval: true
+  batch_or_epoch: epoch
+  local_update_steps: 20
+  optimizer:
+    type: patchSGD
+    lr: 0.001
+    momentum: 0.9
+    nesterov: true
+    weight_decay: 0.00001
+    weight_decay_bn_bias: 0.
+  scheduler:
+    type: warmup_cosine_scheduler
+    warmup_iters: 0
+    clamp_lr: 0.
