--- a/yamls/nas_client_cfg.yaml
+++ b/yamls/nas_client_cfg.yaml
@@ -1,7 +1,5 @@
-personalized_model_cfg: "exp/nas_fl_lr_on_cifar100_lr0.1_lstep1/sub_exp_20231103212521/client_best_infos.json"
-
 model:
-  type: attentive_subnet
+  type: attentive_min_subnet
 #    n_classes: 10
   bn_momentum: 0.1
   bn_eps: 0.00001
@@ -9,11 +7,10 @@ model:
   drop_connect: 0.2
   drop_connect_only_last_two_stages: true
 trainer:
-  type: mutual_distill_trainer
+  type: enhance_trainer
 criterion:
-  type: kl_divergence # CrossEntropyLoss, balanced_softmax
-  temperature: 1.0
-  alpha: 0.5
+  type: balanced_softmax # CrossEntropyLoss, balanced_softmax
+  label_smoothing: 0
 regularizer:
   mu: 0.0
   type: ''
@@ -25,8 +22,8 @@ dataloader:
   pin_memory: false
   num_workers: 6
 train:
-  local_update_steps: 1
   batch_or_epoch: epoch
+  local_update_steps: 1
   optimizer:
     type: patchSGD
     lr: 0.1
@@ -49,3 +46,18 @@ eval:
   split: ['test'] # 'val',
   best_res_update_round_wise_key: 'test_acc'
   report: ['raw']  # 'weighted_avg', 'avg', 'fairness',
+finetune:
+  before_eval: false
+  batch_or_epoch: epoch
+  local_update_steps: 1
+  optimizer:
+    type: patchSGD
+    lr: 0.001
+    momentum: 0.9
+    nesterov: true
+    weight_decay: 0.00001
+    weight_decay_bn_bias: 0.
+  scheduler:
+    type: warmup_cosine_scheduler
+    warmup_iters: 0
+    clamp_lr: 0.
