--- a/yamls/nas_server_cfg.yaml
+++ b/yamls/nas_server_cfg.yaml
@@ -11,7 +11,7 @@ use_amp: true
 ensemble_distillation:
   enable: true
   type: "avg_logits"  # "avg_logits" or "max_logits"
-  include: [ "min", "max", "non-extreme" ]
+  include: ["max"]
   coef: 1.0
 
 inplace_distillation:
@@ -34,7 +34,7 @@ federate:
   mode: standalone
   process_num: 1  # maybe we can use gpus >= 1
   client_num: 8
-  total_round_num: 360
+  total_round_num: 120
   sampler: uniform
 #  sample_client_rate: 1.0
   make_global_eval: true  # simulate the global eval # important!
@@ -58,33 +58,19 @@ data:
   random_erase: false
   cutout: false
 #  transform: [['ToTensor'], ['Normalize', {'mean': [0.9637], 'std': [0.1592]}]]
-finetune:
-  before_eval: false
-  batch_or_epoch: epoch
-  local_update_steps: 1
-  optimizer:
-    type: patchSGD
-    lr: 0.01
-    momentum: 0.9
-    nesterov: true
-    weight_decay: 0.00001
-    weight_decay_bn_bias: 0.
-  scheduler:
-    type: warmup_cosine_scheduler
-    warmup_iters: 0
-    clamp_lr: 0.
 
 # For Server distillation to supernet (training)
 model:
   type: attentive_supernet
+  pretrain: ""
 #    n_classes: 10
-  bn_momentum: 0
+  bn_momentum: 0.1
   bn_eps: 0.00001
   drop_out: 0.2
   drop_connect: 0.2
   drop_connect_only_last_two_stages: true
 trainer:
-  type: distill_supernet_trainer
+  type: ensemble_distill_supernet_trainer
 criterion:
   type: alpha_divergence  # alpha_divergence, kl_divergence(temperature)
 regularizer:
