--- a/yamls/feddf_client_cfg.yaml
+++ b/yamls/feddf_client_cfg.yaml
@@ -1,3 +1,5 @@
+client_models_cfg: ""
+
 criterion:
   type: balanced_softmax  # alpha_divergence, kl_divergence
   label_smoothing: 0
@@ -20,10 +22,11 @@ train:
 finetune:
   before_eval: true
   batch_or_epoch: epoch
+  criterion_base: "eval"  # "train" or "eval"
   local_update_steps: 20
   optimizer:
     type: patchSGD
-    lr: 0.001
+    lr: 0.01
     momentum: 0.9
     nesterov: true
     weight_decay: 0.00001
