--- a/yamls/feddf_server_cfg.yaml
+++ b/yamls/feddf_server_cfg.yaml
@@ -9,32 +9,22 @@ use_gpu: true
 use_amp: true
 
 ensemble_distillation:
-  enable: true
+#  enable: true  # default: True
   type: "avg_logits"  # "avg_logits" or "max_logits"
-  include: ["max"]  # "min", "max", "non-extreme"
-  coef: 1.0
-
-inplace_distillation:
-  enable: true
-  type: "normal" # "normal" or "reverse"
-  coef: 1.0
 
 public_ground_truth:
   enable: false
-  include: ["max"] # , "max", "non-extreme"
-
-#supernet_bn_tracking: true
 
 device: 0
 #early_stop:
 #  patience: 5
 seed: 0
 federate:
-  method: NAS
+  method: FedTrain
   mode: standalone
   process_num: 1  # maybe we can use gpus >= 1
   client_num: 8
-  total_round_num: 120
+  total_round_num: 60
   sampler: uniform
 #  sample_client_rate: 1.0
   make_global_eval: true  # simulate the global eval # important!
@@ -58,21 +48,20 @@ data:
   random_erase: false
   cutout: false
 #  transform: [['ToTensor'], ['Normalize', {'mean': [0.9637], 'std': [0.1592]}]]
-
-# For Server distillation to supernet (training)
+# for server
 model:
-  type: attentive_supernet
+  type: attentive_min_subnet
   pretrain: ""
-#    n_classes: 10
+  #    n_classes: 10
   bn_momentum: 0.1
   bn_eps: 0.00001
   drop_out: 0.2
   drop_connect: 0.2
   drop_connect_only_last_two_stages: true
 trainer:
-  type: ensemble_distill_supernet_trainer
+  type: ensemble_distill_trainer
 criterion:
-  type: kl_divergence  # alpha_divergence, kl_divergence(temperature)
+  type: kl_divergence # CrossEntropyLoss, balanced_softmax
   temperature: 1.0
   alpha: 1.0  # not work when public_ground_truth == False
 regularizer:
@@ -87,10 +76,10 @@ dataloader:
   num_workers: 6
 train:
   batch_or_epoch: epoch
-  local_update_steps: 5
+  local_update_steps: 1
   optimizer:
     type: patchSGD
-    lr: 0.1
+    lr: 0.08
     momentum: 0.9
     nesterov: true
     weight_decay: 0.00001
@@ -105,17 +94,8 @@ grad:
   grad_clip: 1.0
 eval:
   freq: 1
-  metrics: ['acc'] #, 'avg_loss'
+  metrics: ['acc']  # 'correct', 'loss_regular'  #, 'avg_loss'
   monitoring: []
-  split: ['test', 'train']  # for 'train' split, it has train_transform
+  split: ['test'] # 'val',
   best_res_update_round_wise_key: 'test_acc'
   report: ['raw']  # 'weighted_avg', 'avg', 'fairness',
-
-supernet_arch_sampler:
-  num_arch_training: 4
-  method: 'bestup'
-  arch_to_flops_map_file_path: './attentive_nas_data/flops_archs_off_table.map'
-  discretize_step: 25
-  num_trials: 3
-
-
