--- a/yamls/fedmd_server_cfg.yaml
+++ b/yamls/fedmd_server_cfg.yaml
@@ -1,17 +1,15 @@
 use_gpu: true
 use_amp: true
 
-ensemble_distillation:
-#  enable: true  # default: True
-  type: "avg_logits"  # "avg_logits" or "max_logits"
-
-public_ground_truth:
-  enable: false
+consensus:
+  type: "avg_logits"
 
 device: 0
 seed: 0
+model:
+  pretrain: ""
 federate:
-  method: FedKEMF
+  method: FedMD
   mode: standalone
   process_num: 1  # maybe we can use gpus >= 1
   client_num: 8
@@ -32,20 +30,6 @@ data:
   autoaugment: true
   random_erase: false
   cutout: false
-model:
-  type: attentive_min_subnet
-  pretrain: ""
-  bn_momentum: 0.1
-  bn_eps: 0.00001
-  drop_out: 0.2
-  drop_connect: 0.2
-  drop_connect_only_last_two_stages: true
-trainer:
-  type: ensemble_distill_trainer
-criterion:
-  type: kl_divergence # CrossEntropyLoss, balanced_softmax
-  temperature: 1.0
-  alpha: 1.0  # not work when public_ground_truth == False
 dataloader:
   type: base
   batch_size: 256
@@ -53,25 +37,6 @@ dataloader:
   shuffle: true # only for train dataloader
   pin_memory: false
   num_workers: 6
-train:
-  batch_or_epoch: epoch
-  recalibrate_bn: false
-  local_update_steps: 1
-  optimizer:
-    type: patchSGD
-    lr: 0.08
-    momentum: 0.9
-    nesterov: true
-    weight_decay: 0.00001
-    weight_decay_bn_bias: 0.
-  scheduler:
-    type: warmup_cosine_scheduler
-    # max_iters: 360 # iters, based on batch num
-    warmup_iters: 5 # epoch * num_batch_per_epoch
-    clamp_lr: 0.
-    warmup_factor: 0.0001
-grad:
-  grad_clip: 1.0
 eval:
   freq: 1
   metrics: ['acc']  # 'correct', 'loss_regular'  #, 'avg_loss'
