--- a/yamls/nas_server_cfg.yaml
+++ b/yamls/nas_server_cfg.yaml
@@ -1,10 +1,3 @@
-wandb:
-  use: false
-  name_user: justone
-  name_project: distributed_attentive_nas
-  client_train_info: true # train results on Client
-  server_train_info: true # train results on Server
-  online_track: true # origin: false, why
 use_gpu: true
 use_amp: true
 
@@ -23,11 +16,14 @@ public_ground_truth:
   enable: false
   include: ["max"] # , "max", "non-extreme"
 
-#supernet_bn_tracking: true
+supernet_arch_sampler:
+  num_arch_training: 4
+  method: 'bestup'
+  arch_to_flops_map_file_path: './attentive_nas_data/flops_archs_off_table.map'
+  discretize_step: 25
+  num_trials: 3
 
 device: 0
-#early_stop:
-#  patience: 5
 seed: 0
 federate:
   method: NAS
@@ -35,13 +31,7 @@ federate:
   process_num: 1  # maybe we can use gpus >= 1
   client_num: 8
   total_round_num: 120
-  sampler: uniform
-#  sample_client_rate: 1.0
   make_global_eval: true  # simulate the global eval # important!
-  resource_info_file: ''  # NOTE(Variant): for personalized NAS
-#fedprox:
-#  use: false
-#  mu: 0.1
 personalization:
   local_param: []
   share_non_trainable_para: true
@@ -57,13 +47,9 @@ data:
   autoaugment: true
   random_erase: false
   cutout: false
-#  transform: [['ToTensor'], ['Normalize', {'mean': [0.9637], 'std': [0.1592]}]]
-
-# For Server distillation to supernet (training)
 model:
   type: attentive_supernet
   pretrain: ""
-#    n_classes: 10
   bn_momentum: 0.1
   bn_eps: 0.00001
   drop_out: 0.2
@@ -75,9 +61,6 @@ criterion:
   type: kl_divergence  # alpha_divergence, kl_divergence(temperature)
   temperature: 1.0
   alpha: 1.0  # not work when public_ground_truth == False
-regularizer:
-  mu: 0.0
-  type: ''
 dataloader:
   type: base
   batch_size: 256
@@ -87,6 +70,7 @@ dataloader:
   num_workers: 6
 train:
   batch_or_epoch: epoch
+  recalibrate_bn: false
   local_update_steps: 5
   optimizer:
     type: patchSGD
@@ -97,7 +81,7 @@ train:
     weight_decay_bn_bias: 0.
   scheduler:
     type: warmup_cosine_scheduler
-    #      max_iters: 360 # iters, based on batch num
+    # max_iters: 360 # iters, based on batch num
     warmup_iters: 5 # epoch * num_batch_per_epoch
     clamp_lr: 0.
     warmup_factor: 0.0001
@@ -110,12 +94,3 @@ eval:
   split: ['test', 'train']  # for 'train' split, it has train_transform
   best_res_update_round_wise_key: 'test_acc'
   report: ['raw']  # 'weighted_avg', 'avg', 'fairness',
-
-supernet_arch_sampler:
-  num_arch_training: 4
-  method: 'bestup'
-  arch_to_flops_map_file_path: './attentive_nas_data/flops_archs_off_table.map'
-  discretize_step: 25
-  num_trials: 3
-
-
