--- a/yamls/oneshot_cfg.yaml
+++ b/yamls/oneshot_cfg.yaml
@@ -1,7 +1,7 @@
 use_gpu: true
 use_amp: true
 
-client_aware_training: True
+client_aware_training: false
 
 supernet_arch_sampler:
   num_arch_training: 4
@@ -16,15 +16,13 @@ federate:
   method: OneShot
   mode: standalone
   process_num: 1  # maybe we can use gpus >= 1
-  total_round_num: 120
   make_global_eval: true  # simulate the global eval # important!
 personalization:
   local_param: []
   share_non_trainable_para: true
 data:
   root: data/
-  type: cifar100
-  splits: [0.6, 0.2, 0.2]  # [all_clients_train_set, all_clients_val_set, server_train_set]
+  splits: [0.8, 0.1, 0.1]  # [all_clients_train_set, all_clients_val_set, server_train_set]
   splitter: lda
   splitter_args:
     - alpha: 0.5
